# Employee-Salary-Management-System

./: .gitignore  BDay.h  CEmployee.cpp  CEmployee.h  CMakeLists.txt  CManager.cpp  CManager.h  CMgr.cpp  CMgr.h  CSales.cpp  CSales.h  CWage.cpp  CWage.h  EmployeeSalaryManagementSystem.cpp  README.md  employee.data  main.cpp  salary.data  salary_output.txt  system.cpp  system.h
